[package]
name = "libafl_quickjs"
version = "0.2.0"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.3" }
num_cpus = "1.0"

[dependencies]
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "55a300d", features = ["default", "nautilus"] }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "55a300d" }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "55a300d", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }
serde_json = "1.0"
# TODO Include it only when building cc
libafl_cc = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "55a300d" }
clap = { version = "4.5", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] } # no_std compatible serde serialization format

[lib]
name = "libafl_quickjs"
crate-type = ["staticlib"]
